<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CourseViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course_list">CourseListActivity</string>
    <string name="title_activity_course_list_detail">CourseListDetailActivity</string>
    <string name="subject">Subject</string>
    <string name="course_catalog">Course Catalog</string>
    <string name="check_course">Check Course</string>
    <string name="previous_term">Previous Term</string>
    <string name="current_term">Current Term</string>
    <string name="next_term">Next Term</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>

</resources>
