<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9F5A9"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.courseviewer.CourseListActivity$PlaceholderFragment" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" >

        <RadioButton
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_term" />

        <RadioButton
            android:id="@+id/cur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/current_term" />

        <RadioButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_term" />
    </RadioGroup>

    <AutoCompleteTextView
        android:id="@+id/subject_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_style"
        android:completionThreshold="1"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/subject" >

        <requestFocus />
    </AutoCompleteTextView>

    <EditText
        android:id="@+id/catalog_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/subject_text"
        android:layout_below="@+id/subject_text"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_text_style"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/course_catalog" />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/catalog_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@drawable/button_style"
        android:onClick="onCheck"
        android:text="@string/check_course" />

</RelativeLayout>